export danych, logi zamówień, statusy, wykresy, refactor