@@ -11,18 +11,19 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 @Service
 public class AdminProductImageService {
 
-    @Value("${app.uploadDit}")
-    private String uploadDit;
+    @Value("${app.uploadDir}")
+    private String uploadDir;
 
     public String uploadImage(String filename, InputStream inputStream) {
         String newFileName = SlugifyUtils.slugifyFileName(filename);
-        newFileName = ExistingFileRenameUtils.renameIfExists(Path.of(uploadDit), newFileName);
-        Path filePath = Path.of(uploadDit).resolve(newFileName);
-        try (OutputStream outputStream = Files.newOutputStream(filePath)) {
+        newFileName = ExistingFileRenameUtils.renameIfExists(Path.of(uploadDir), newFileName);
+        Path filePath = Paths.get(uploadDir).resolve(newFileName);
+        try(OutputStream outputStream = Files.newOutputStream(filePath)) {
             inputStream.transferTo(outputStream);
         } catch (IOException e) {
             throw new RuntimeException("Nie mogę zapisać pliku", e);
@@ -32,6 +33,6 @@ public class AdminProductImageService {
 
     public Resource serveFiles(String filename) {
         FileSystemResourceLoader fileSystemResourceLoader = new FileSystemResourceLoader();
-        return fileSystemResourceLoader.getResource(uploadDit + filename);
+        return fileSystemResourceLoader.getResource(uploadDir + filename);
     }
 }
